--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -154,6 +154,7 @@ for key, value in token_counts.items():
             docs_containing_key += 1
     
     # 만약 단어가 어떤 문서에도 없었다면, IDF를 계산할 수 없으므로 건너뜀
+    # zero_vector에서 가져왔으므로 건들지 않으면 자동으로 0
     if docs_containing_key == 0:
         continue
 
