--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -170,9 +170,14 @@ for key, value in token_counts.items():
 # 질문 벡터와 첫 번째 문서 벡터의 코사인 유사도를 계산하고 출력
 print(cosine_sim(query_vec, document_tfidf_vectors[0]))
 # 결과: 0.5235048549676834
+# query 문장과 doc_0의 문장을 비교하면 ‘to’, ‘the’, ‘store’ 가 겹침
+# 
+
 # 질문 벡터와 두 번째 문서 벡터의 코사인 유사도를 계산하고 출력
 print(cosine_sim(query_vec, document_tfidf_vectors[1]))
 # 결과: 0.0
+
+
 # 질문 벡터와 세 번째 문서 벡터의 코사인 유사도를 계산하고 출력
 print(cosine_sim(query_vec, document_tfidf_vectors[2]))
 # 결과: 0.0
