--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -182,3 +182,23 @@ print(cosine_sim(query_vec, document_tfidf_vectors[1]))
 print(cosine_sim(query_vec, document_tfidf_vectors[2]))
 # 결과: 0.0
 ```
+
+<br/>
+
+### 로그 정규화 
+
+- IDF의 기본적인 개념만 고려한다면 위 코드처럼 계산해도 충분하지만, 실제로는 총 문서 수가 **굉장히 많을 수 있다는 문제**가 있음
+
+- 따라서 단순히 전체 문서 수에서 등장 문서 수를 나눈 IDF 값의 **분포가 매우 커질 수 있다**
+
+    - 구글 검색을 했을 때 어떤 단어는 10억 개 문서 중 단 2~3개에만 나타날 수 있다. 이렇게 되면 IDF 값이 기하급수적으로 커져서 다른 단어들과의 중요도 차이가 너무 벌어지게 됨
+
+<br/>
+
+- 이에 대한 **정규화** 방안으로 일반적으로 IDF는 **log**를 취한 값을 활용
+  
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장IDF로그공.png)
+ 
+    - 특정 단어의 IDF 값이 혼자 너무 튀는 것을 방지하고 전체적인 데이터 분포를 안정적으로 만들어줌
+ 
+    - 또한 전체 문서에서 등장 횟수가 0인 단어가 있다면 IDF 분모가 0이 되므로 이를 예방하기 위해 **분모에 1을 더해주는 형식**이 주로 활용되고 있음
