--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -202,3 +202,123 @@ print(cosine_sim(query_vec, document_tfidf_vectors[2]))
     - 특정 단어의 IDF 값이 혼자 너무 튀는 것을 방지하고 전체적인 데이터 분포를 안정적으로 만들어줌
  
     - 또한 전체 문서에서 등장 횟수가 0인 단어가 있다면 IDF 분모가 0이 되므로 이를 예방하기 위해 **분모에 1을 더해주는 형식**이 주로 활용되고 있음
+
+<br/>
+
+### IDF 모듈 사용 
+
+```ruby
+from sklearn.feature_extraction.text import TfidfVectorizer
+
+# 이전 코드에서 사용한 예시 문장
+corpus = [doc_0, doc_1, doc_2]
+
+# TfidfVectorizer 객체를 생성
+# min_df=1은 최소 1개 이상의 문서에 나타난 단어만 어휘로 간주하라는 의미
+vectorizer = TfidfVectorizer(min_df=1)
+
+# corpus 데이터를 학습(fit)하고 TF-IDF 행렬로 변환(transform)
+model = vectorizer.fit_transform(corpus)
+
+# 결과를 사람이 보기 쉬운 밀집 행렬(dense matrix) 형태로 출력
+print(model.todense())
+
+# 예시 출력
+# [[0.         0.         0.42662402 0.18698644 0.18698644 0.        ]
+#  [0.22087441 0.18698644 0.         0.         0.         0.18698644]
+#  ...
+```
+
+<br/>
+
+### p.10부터
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
