--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -179,19 +179,21 @@
 
 ### HSV 컬러 모델
 
-- **Hue(색상)** : 빨강, 파랑, 초록 등 순수한 색의 종류
+- **HSV 의미**
 
-    - 𝐻 ∝ 색상간차이 
+    - **Hue(색상)** : 빨강, 파랑, 초록 등 순수한 색의 종류
 
-- **Saturation(채도)** : 색의 선명함, 회색~원색까지의 비율
+        - 𝐻 ∝ 색상간차이 
 
-    -  𝑆 ∝max(𝑅,𝐺,𝐵) −min(𝑅,𝐺,𝐵) 
+    - **Saturation(채도)** : 색의 선명함, 회색~원색까지의 비율
 
-    - 채도가 높으면 선명한 색, 낮으면 흐린 회색에 가까움 
+        - 𝑆 ∝max(𝑅,𝐺,𝐵) −min(𝑅,𝐺,𝐵) 
 
-- **Value(명도)** : 밝기 정도
+        - 채도가 높으면 선명한 색, 낮으면 흐린 회색에 가까움 
 
-    -  𝑉 =max(𝑅,𝐺,𝐵) 
+    - **Value(명도)** : 밝기 정도
+
+        - 𝑉 =max(𝑅,𝐺,𝐵) 
 
 - 인간이 색을 인식하는 방식에 가깝게 설계된 모델
 
@@ -209,8 +211,25 @@
   
 <br/>
 
-## p.14부터 
+### 이진 영상 (Binary Image)
 
+- 화소가 **0(흑)** 또는 **1(백)** 인 영상
+
+- 1 비트면 저장할 수 있는데, 편의상 **1바이트** 사용하는 경우가 많음
+
+    - 이 부분은 컴퓨터 구조 관점이니 짧게만 설명
+ 
+        - 컴퓨터의 두뇌(CPU)와 저장공간(메모리)은 데이터를 주고받을 때 최소 단위를 **1바이트(8비트 묶음)** 로 약속함
+     
+        - 그래서 편하게 가져오려고 1 바이트를 사용
+     
+        - **에지 검출 결과를 표시**하거나 물체와 배경을 **구분**하여 표시하는 응용 등에 사용
+     
+            - 검은색 배경에 오직 검출된 윤곽선만 흰색으로 표시하기 때문에 **핵심 정보를 뚜렷하게** 보여주기 때문
+         
+            - ![System Resources](../../images/Computer%20Vision%20images/01-2장이진영상예시그림.png)
+
+<br/>
 
 
 
