--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -231,11 +231,64 @@
 
 <br/>
 
+- **임계값**을 이용하여 흑백을 구분
 
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장이진영상임계값.png)
 
+    - 좋은 임계값을 정하는 방법 중 하나는, 이미지 히스토그램에서 밝은 영역과 어두운 영역의 봉우리 사이 **계곡에 해당하는 값**을 선택하는 것
+ 
+        - ![System Resources](../../images/Computer%20Vision%20images/01-2장임계값설정방법.png)
 
+<br/>
 
+- **R G B 채널 내부 정보**
 
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장RGB컬러예시.png) 
+
+    - 위 예시는 컬러 이미지를 흑백 이미지로 변경한 것이다
+ 
+        - 여기서 **주의할 점**은 이진 영상은 오직 0과 1인 영상인 것이고 위 예시는 회색까지 포함하는 **흑백 영상**이다
+     
+    - R, G, B 채널에 따라 **어떤 부분이 더 밝고 어두인지가 다르다**
+ 
+        - Red 채널로 세상을 본다면, 빨간색 물체가 필터를 통과해 빛이 더 많이 들어와서 **가장 밝게 나온다** (G와 B도 각자의 색이 가장 밝게 나온다)
+     
+        - 쉽게 말해서, **각자 채널은 그 색의 세기를 기준으로 판단**한다
+ 
+    - 컬러 이미지를 흑백 영상으로 변환하는 공식은 아래와 같다
+ 
+        - **Grayscale = (0.299 × R) + (0.587 × G) + (0.114 × B)**
+     
+        - 이 공식은 'ITU-R BT.601' 이라는 국제 표준에서 정의된 휘도(Luminance, Y), 즉 사람이 인지하는 밝기를 계산하는 식이다 
+
+<br/>
+
+### 오츄(Ostu) 알고리즘
+
+- 이진 영상을 만드는 **최적의 임계값(Threshold)을 구하** 알고리즘
+
+    - 원리 :  그룹 간 **분산을 최대**로 만드는 것'
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장오츄알고리즘공식1.png)
+ 
+        - n0(t) : 임계값 t로 이진화 했을 때 0에 속한 픽셀의 개수
+     
+        - v0(t) : 그룹 0에 속한 픽셀들의 밝기값에 대한 분산
+     
+        - **그룹 별로 분산을 최대화** 한다는 것은 각 그룹은 **자신의 그룹을 잘 설명하기 위해** 그룹 내부의 분산은 **반대로 작아야 한다**
+     
+            - ![System Resources](../../images/Computer%20Vision%20images/01-2장오츄알고리즘공식2.png)
+
+<br/>
+
+- 예시 문제
+
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장오츄알고리즘예시문제.png)
+ 
+    - 위 예시를 보면 **가중치는 (해당 그룹에 속한 픽셀의 총개수) / (이미지의 전체 픽셀 수)** 로 구한다
+ 
+    - 해당 풀이에서 제곱을 한 이유는 '거리'의 절대적인 크기만 보기 위함이다 
+ 
 
 
 
