--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -287,7 +287,7 @@
  
     - 위 예시를 보면 **가중치는 (해당 그룹에 속한 픽셀의 총개수) / (이미지의 전체 픽셀 수)** 로 구한다
  
-    - 해당 풀이에서 제곱을 한 이유는 '거리'의 절대적인 크기만 보기 위함이다 
+    - 분산 공식은 시그마 제곱을 이용해서 풀이함
  
 
 
