--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -293,12 +293,47 @@
 
 ### 4-연결성 & 8-연결성
 
+- **연결성(Connectivity)** : 이미지에서 어떤 픽셀들이 **서로 이웃인지**를 정의하는 규칙
+ 
+    - 이진 영상에서 사용  
 
+    - **4-연결성** : 어떤 픽셀의 상, 하, 좌, 우에 있는 픽셀만을 이웃으로 인정하는 방식 (십자 모양)
 
+    - **8-연결성** : 상, 하, 좌, 우뿐만 아니라 대각선에 있는 픽셀까지 모두 이웃으로 인정하는 방식 (3x3 정사각형 모양)
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장연결성구조사진.png)
 
+<br/>
 
+- **연결성을 사용하는 이유** : 이미지에 있는 여러 객체 덩어리를 각각 별개의 것으로 인식하고 분리하기 위해서이다
+   
+ <br/>
 
+ - **연결성을 이용한 검사 과정**
 
+    - 픽셀을 왼쪽 위부터 오른쪽을 순차적으로 이동하고 도착하면 다음 열로 이동하여 이것을 반복한다
+ 
+    - 4-연결성을 예로 들자면, 검사를 할땨 **이전에 거쳐온** 상하좌우에 해당하는 부분의 픽셀이 바뀌지 않으면 같은 그룹으로 인식함
+  
+    - 이것을 반복하여 그룹을 분리 
+
+<br/>
+  
+- **연결성 예시**
+
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장연결성과정설명그림.png)
+ 
+    - 4 연결성을 보면 처음에 맨 위에서 탐색
+ 
+    - 첫 행은 모두 0이므로 건너 뜀 (**1만 검사**)
+ 
+    - 2행 2열에서 처음 1 발견 -> 이전에 거쳐온 길을 봤을 때, 왼쪽과 위쪽의 변화가 없으므로 여기서부터 1번 그룹 시작
+ 
+        - 2행 3열에서 1 발견 -> 이전에 거쳐온 왼쪽이 변화 -> 이 부분도 그룹 1로 판단
+     
+    - 3행 5열에서 1 발견 -> 이전에 거쳐온 길에서 변화 x -> 새로운 그룹 2로 판단
+ 
+        - 여기서 **2는 화솟값의 변화가 아니라 그룹의 이름** 
 
 
 
