--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -335,11 +335,25 @@
  
         - 여기서 **2는 화솟값의 변화가 아니라 그룹의 이름** 
 
+<br/>
 
+### 모폴로지
 
+- **정의** : 이미지 속 객체의 형태나 **구조를 분석**하고 **변형**하는 이미지 처리 기술
 
+    - 연결성에서 사용한 규칙을 바탕으로 수행한다 (다양한 구조도 존재)
 
+<br/>
 
+- **대표적인 처리 유형**
+
+    - **팽창** : 작은 흠을 메우거나 끊어진 영역을 연결
+ 
+    - **침식** : 경계에 솟은 돌출 부분을 깎는 효과 -> 영역을 작게 만듦
+ 
+    - **열림** : 침식한 결과에 팽창 적용. 원래 영역 크기 유지
+ 
+    - **닫힘** :  팽창한 결과에 침식 적용. 원래 영역 크기 유지
 
 
 
