--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -355,8 +355,33 @@
  
     - **닫힘** :  팽창한 결과에 침식 적용. 원래 영역 크기 유지
 
+<br/>
 
+### 팽창 & 침식 과정 
 
+- **팽창 과정**
+
+    - 구조요소의 중심이 1인 화소 (흰색 부분)를 이동하며 영역 밖으로 튀어나온 부분의 화솟값을 1로 변환
+
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장팽창과정.png)
+
+<br/>
+
+- **침식 과정**
+
+    - 구조요소의 중심이 1인 화소 (흰색 부분)를 이동하며 모든 영역이 내부에 존재하면 가운데 값만 1로 변환
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/01-2장침식과정.png)
+
+<br/>
+
+### 열기 & 닫기 과정 
+
+- 열기 : 침식 후 팽창
+
+- 닫기 : 팽창 후 침식
+
+- ![System Resources](../../images/Computer%20Vision%20images/01-2장열기닫기.png)
 
 
 
