--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -127,9 +127,19 @@
              
                 - 이때, 원래 50점 학생은 10점으로, 60점 학생은 90점으로 점수를 재매핑하면 차이가 확연하게 보임 
 
+<br/>
 
+### 영역 연산 
 
+- **영역 연산** : **이웃 화소를 고려**해서 새로운 값을 결정하는 기법
 
+    - 주로 **컨볼루션(Convolution) 연산**을 통해 이루어짐 
+
+<br/>
+
+- **컨볼루션(Convolution)** : 각 화소에 필터u 를 적용해 곱의 합을 구하는 연산
+
+## p.10부터 
 
 
 
