--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -95,13 +95,13 @@
 
 <br/>
 
-### 기대 제곱 예측 오차(Expected squared prediction error)
+### 기대 제곱 예측 오차(Expected squared prediction error, EPE)
 
 - **기대 제곱 예측 오차(Expected squared prediction error)**
 
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE.png)
- 
-    - 기대 제곱 예측 오차(EPE)는 (Y – f(X))²의 **기댓값**
+   
+    - 실제 값(Y)과 모델의 예측 값(f(X))의 차이를 제곱한 것의 기댓값(E)
  
         - **기대값(expectation)** : 어떤 과정을 무한히 반복했을 때 얻게 되는 평균 결과
      
@@ -117,8 +117,51 @@
 
 <br/>
 
-### p.13부터
+### 기대 제곱 예측 오차 (EPE) 공식 분석 
 
+- 우리가 위에서 봤던 EPE 공식은 아래와 같다
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개1.png)
+ 
+    - 우리의 목표는 예측 모델 f(x)의 **전체 평균 제곱 오차(EPE)** 를 가장 작게 만드는 것이다
+
+<br/>
+ 
+- 이 목표를 달성하기 위한 전략은 전체 평균 오차를 한 번에 다루는 대신, 문제를 더 작은 단위로 쪼개서 평균을 계산하자는 것이다
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개2.png)
+ 
+    - 위 공식에서 안쪽 기댓값 E(Y|X) 는 X = k 일 때 해당하는 확률을 계산하는 것이고 바깥쪽 기댓값 E(x)는 해당 그룹이 나타날 확률을 가중치로 사용하여 평균을 나타낸 것이다
+ 
+    - 아래 전체적인 예시가 있으니 일단, 작은 문제로 쪼개는 것에 초점을 두자 
+ 
+<br/>
+
+- 위에서 쪼개는 것에 핵심을 두어 계산했더니, 그룹별 오차들의 전체 평균을 최소화하려면, 그냥 **각 그룹의 오차를 개별적으로 최소화**하면 된다는 결론에 도달한다 (증명 생략)
+  
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개3.png)
+
+<br/>
+
+- **위 공식 흐름을 이용한 예시** : 학생이 공부한 시간(X)을 알 때, 시험 점수(Y)를 가장 정확하게 예측하는 함수 f(x)를 찾아라 
+
+    - X (입력): 공부 시간 (1시간 또는 2시간)
+
+    - Y (결과): 시험 점수 (70점, 80점, 90점)
+
+    - f(x) (모델): 우리가 만들 예측 함수. f(1)은 1시간 공부했을 때의 예측 점수
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE예시문제표.png)
+      
+    <br/>
+    
+    - 여기서 아래 공식을 사용해보자
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개2.png)
+     
+        - 위 공식을 사용하기 위해선 f(x)가 필요한데 이것은 이전에 나온 것 처럼 아래 공식을 이요한다
+     
+        - 
 
 
 
