--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -133,15 +133,24 @@
  
     - 위 공식에서 안쪽 기댓값 E(Y|X) 는 X = k 일 때 해당하는 확률을 계산하는 것이고 바깥쪽 기댓값 E(x)는 해당 그룹이 나타날 확률을 가중치로 사용하여 평균을 나타낸 것이다
  
+    - 또한 f(x)는 우리가 만들고 싶은 예측 함수(Prediction Model)이다 
+ 
     - 아래 전체적인 예시가 있으니 일단, 작은 문제로 쪼개는 것에 초점을 두자 
  
 <br/>
 
-- 위에서 쪼개는 것에 핵심을 두어 계산했더니, 그룹별 오차들의 전체 평균을 최소화하려면, 그냥 **각 그룹의 오차를 개별적으로 최소화**하면 된다는 결론에 도달한다 (증명 생략)
+- 분리해서 계산하자는 것에 초점을 두면 아래와 같이 단순화 된 공식이 도출된다 
   
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개3.png)
+ 
+    - 위 고시
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개4.png)
 
 <br/>
+
+### 기대 제곱 예측 오차 (EPE) 공식 흐름 예시
+
 
 - **위 공식 흐름을 이용한 예시** : 학생이 공부한 시간(X)을 알 때, 시험 점수(Y)를 가장 정확하게 예측하는 함수 f(x)를 찾아라 
 
@@ -151,7 +160,7 @@
 
     - f(x) (모델): 우리가 만들 예측 함수. f(1)은 1시간 공부했을 때의 예측 점수
  
-    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE예시문제표.png)
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식예시표.png)
       
     <br/>
     
