--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -139,11 +139,13 @@
  
 <br/>
 
-- 분리해서 계산하자는 것에 초점을 두면 아래와 같이 단순화 된 공식이 도출된다 
+- 문제를 분리하는 전략 덕분에, 전체 EPE 최소화라는 거대한 문제를 아래와 같이 **각 그룹별 오차 최소화** 라는 단순한 미니 문제로 바꿀 수 있다 
   
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개3.png)
  
-    - 위 고시
+    - 오차를 최소화하는 그 최적의 값 c는 놀랍게도 아주 간단한 **조건부 기댓값(conditional mean)**, 즉 해당 x 그룹에 속하는 Y 값들의 평균으로 증명되었다.
+ 
+    - 즉 아래 공식을 구하는 것이 **EPE를 최소화하는 모델을 구하는 것**이다 
  
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개4.png)
 
