--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -148,6 +148,8 @@
     - 즉 아래 공식을 구하는 것이 **EPE를 최소화하는 모델을 구하는 것**이다 
  
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개4.png)
+ 
+        - 이렇게 만들어진 모델 f(x)를 가지고 EPE를 계산하면, 그 어떤 다른 모델보다도 가장 낮은 EPE 점수가 나오게 된다 
 
 <br/>
 
