--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -170,11 +170,24 @@
     
     - 여기서 아래 공식을 사용해보자
  
-        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개2.png)
+        - 위에서 증명한 대로 아래 공식을 이용해서 EPE를 구하기 위한 f(x)를 구해보자
      
-        - 위 공식을 사용하기 위해선 f(x)가 필요한데 이것은 이전에 나온 것 처럼 아래 공식을 이요한다
+            - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개4.png)
+              
+    <br/>
+    
+    -  1시간 공부한 그룹 (X=1)
+
+    -  계산 (E[Y|X=1]) =  70×(0.1/0.6) + 80×(0.4/0.6) + 90×(0.1/0.6) = 80점
+ 
+        - 여기서 조건부 확률 사용
      
-        - 
+        - ex: 70점을 의미하는 분수의 분모를 보면 X = 1 인 학생들 중 70점인 인 확률은 전체 0.6에서 0.1임
+     
+     - (E[Y|X=1]) = 80 이므로  f(1) = 80
+
+
+
 
 
 
