--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -176,15 +176,55 @@
               
     <br/>
     
-    -  1시간 공부한 그룹 (X=1)
+    -  **1시간 공부한 그룹 (X=1)**
 
-    -  계산 (E[Y|X=1]) =  70×(0.1/0.6) + 80×(0.4/0.6) + 90×(0.1/0.6) = 80점
+    -  (E[Y|X=1]) =  70×(0.1/0.6) + 80×(0.4/0.6) + 90×(0.1/0.6) = 80점
  
         - 여기서 조건부 확률 사용
      
         - ex: 70점을 의미하는 분수의 분모를 보면 X = 1 인 학생들 중 70점인 인 확률은 전체 0.6에서 0.1임
      
      - (E[Y|X=1]) = 80 이므로  f(1) = 80
+ 
+     <br/>
+
+     - **2시간 공부한 그룹 (X=2)**
+ 
+     - E[Y|X=2] = 80×(0.1/0.4) + 90×(0.3/0.4) = 87.5점
+ 
+     - f(2) = 87.5
+ 
+     <br/>
+
+     - **최종 f(x)**
+ 
+         - f(1) = 80
+
+         - f(2) = 87.5
+
+    <br/>
+    
+    - **EPE 최종 계산**
+ 
+       - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개1.png)
+     
+           - 위 공식에서 f(x)에 우리가 구한 함수 값을 넣어서 계산해주면 
+ 
+       - [y - f(x)]² × Pr(x, y) 구하기
+     
+           - (70 - 80)² × 0.1 = 10.0
+
+           - (80 - 80)² × 0.4 = 0.0
+
+           - (90 - 80)² × 0.1 = 10.0
+
+           - (80 - 87.5)² × 0.1 = 5.625
+
+           - (90 - 87.5)² × 0.3 = 1.875
+        
+           - 최종 EPE = 10.0 + 0.0 + 10.0 + 5.625 + 1.875 = 27.5
+        
+           - 27.5가 **모델이 가질 수 있는 가장 낮은 오차 점수**
 
 
 
