--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -226,7 +226,15 @@
         
            - 27.5가 **모델이 가질 수 있는 가장 낮은 오차 점수**
 
+<br/>
 
+### linear regression (선형회귀)
+
+- 선형 회귀 모델은 회귀 함수 E(Y|X)가 입력 변수들에 대해 **선형(linear)** 이라고 가정
+
+    - 위에서 증명한 EPE에 대한 내용은 이론적인 부분임, 실제로 E(Y|X)는 매우 복잡한 곡선일 수 있음
+ 
+    - 하지만 현실에서는 데이터가 제한적이라 그 복잡한 곡선 형태를 완벽히 알아낼 방법이 없기 때문에 단순한 직선 모양으로 타협함 
 
 
 
