--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -236,7 +236,27 @@
  
     - 하지만 현실에서는 데이터가 제한적이라 그 복잡한 곡선 형태를 완벽히 알아낼 방법이 없기 때문에 단순한 직선 모양으로 타협함 
 
+<br/>
 
+- 선형 회귀는 **단순**하며, 입력이 출력에 어떻게 영향을 미치는지에 대한 **해석 가능한(interpretable)** 설명을 제공
+
+    - ex: (점수) = 2 × (공부시간) + 3 이라는 모델이 있다면, 공부시간이 1시간 늘면 점수가 2점 오른다라고 명확하게 설명하고 해석 가능
+ 
+    - 예측 목적으로는, 때때로 비선형 모델보다 성능이 더 좋을 수도 있다
+ 
+<br/>
+
+- **선형회귀 공식**
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1선형회귀공식.png)
+ 
+    - Ŷ (Y햇): 모델이 예측한 값
+
+    - β̂₀ (베타햇 제로): 절편(intercept)이라는 의미로 모든 입력(X)이 0일 때의 기본값
+
+    - β̂ⱼ (베타햇 j): 계수(coefficient)라는 의미로 j번째 입력 변수 Xⱼ가 결과에 얼마나 영향을 미치는지 나타내는 가중치 또는 중요도
+
+### p.21부터
 
 
 
