--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -256,7 +256,24 @@
 
     - β̂ⱼ (베타햇 j): 계수(coefficient)라는 의미로 j번째 입력 변수 Xⱼ가 결과에 얼마나 영향을 미치는지 나타내는 가중치 또는 중요도
 
-### p.21부터
+<br/>
+
+- 모델이 예측한 값 Ŷ (Y햇)을 풀어서 쓰면 아래와 같다
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1y햇.png)
+ 
+    - 하지만 현실 세계에서의 데이터는 완벽한 직선 위에 존재하지 않으므로 오차 ε (엡실론)를 반영해야 한다
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1선형회귀실제y값.png)
+
+<br/>
+
+- 정리하면
+  
+    - f(X) = E[Y|X] : 평균적인 오차를 가장 작게 만드는 함수 (이상적)
+ 
+    - f(X) = β₀ + β₁X : 현실적인 예측 모델 (현실적)
+
 
 
 
