--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -284,13 +284,15 @@
 
     - 파란색 세로 선은 x = k 일 때, y 값의 분포임 
 
-- 오른쪽 그래프 : 오른쪽 그래프는 Y의 전체 확률 분포를 보여줌
+- 오른쪽 그래프 : 각 X 지점에서의 Y의 조건부 확률 분포를 보여줌
+
+    - X=2일 때의 Y 분포, X=4일 때의 Y 분포처럼 X 값에 따라 조건적으로 달라지는 분포를 보여줌
 
     - 모든 확률 분포가 동일한데 이것은 등분산성(Homoscedasticity)을 가정한 것
  
 - 즉, 위 그래프를 보고 알 수 있는 사실은 특정 X 지점에서 Y 데이터가 분포하는 모습(p(Y|X=x))은, 회귀선(β₀+β₁X)을 정중앙으로 하는 **정규분포**이다
 
-    - 예를 들어. 우리가 x 시간 만큼 공부했을 때 성적을 평균으로 구할 때 하나의 스칼라 값 (ex:  85점이 평균) 으로 나타내지만, 정확히 80점이 아닐 수 있다
+    - 예를 들어. 우리가 x 시간 만큼 공부했을 때 성적을 평균으로 구할 때 하나의 스칼라 값 (ex:  85점이 평균) 으로 나타내지만, 실제로는 정확히 80점이 아닐 수 있다
  
     - 하지만 이 결론으로 인해 Y의 분포는 85점을 중심으로 하는 정규분포라는 사실을 알기 때문에 구간을 제시할 수 있게 된다 
 
