--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -278,7 +278,7 @@
 
 ### 선형회귀 그래프 예시 
 
-![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1선형회귀그래프예시.png)
+![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장선형회귀그래프예시.png)
 
 - 왼쪽 그래프 :  X 지점(2, 5, 8)에서 Y의 평균(노란색 x)을 보여줌
 
@@ -289,6 +289,8 @@
     - X=2일 때의 Y 분포, X=4일 때의 Y 분포처럼 X 값에 따라 조건적으로 달라지는 분포를 보여줌
 
     - 모든 확률 분포가 동일한데 이것은 등분산성(Homoscedasticity)을 가정한 것
+
+<br/>
  
 - 즉, 위 그래프를 보고 알 수 있는 사실은 특정 X 지점에서 Y 데이터가 분포하는 모습(p(Y|X=x))은, 회귀선(β₀+β₁X)을 정중앙으로 하는 **정규분포**이다
 
@@ -296,11 +298,53 @@
  
     - 하지만 이 결론으로 인해 Y의 분포는 85점을 중심으로 하는 정규분포라는 사실을 알기 때문에 구간을 제시할 수 있게 된다 
 
+<br/>
 
+### RSS (residual sum of squares) : 잔차 제곱합 
 
+- ŷᵢ를 i번째 예측값이라고 하자. 그러면 eᵢ = yᵢ - ŷᵢ는 i번째 **잔차(residual)** 를 나타낸다
 
+- ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS공식.png)
 
+    - 이것은 아래 공식과 동치이다
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS공식2.png)
 
+<br/>
+
+- **RSS (residual sum of squares) 최소화 하는 방법**
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS최소화공식.png)
+ 
+    - RSS는 반복적으로 업데이트를 하는게 아니라 우리가 가진 모든 데이터(모든 x와 y)를 이 공식에 단 한 번만 넣으면, RSS를 최소화하는 유일하고 완벽한 기울기와 편향 값이 바로 계산된다
+ 
+        - 기울기 β̂₁ 분자 분석
+     
+            - (xᵢ - x̄): i번째 x값이 평균보다 큰가 작은가?
+
+            - (yᵢ - ȳ): i번째 y값이 평균보다 큰가 작은가?
+         
+            - x도 평균보다 크고, y도 평균보다 크면 → (+) 값
+         
+                - 우상향 관계 파악  
+
+            - x도 평균보다 작고, y도 평균보다 작으면 → (+) 값 (- × -)
+         
+                - 우하향 관계 파악 
+
+            - 둘의 방향이 다르면 → (-) 값
+       
+        - β̂₁ 분모 분석
+     
+            - X 데이터 자체가 얼마나 넓게 퍼져있는가?
+
+        <br/>
+
+        - 절편 β̂₀ 분석
+     
+            - 우리가 구한 직선이 데이터의 **정중앙**을 지나가도록 보정해주는 값
+         
+            - 데이터를 가장 잘 나타내는 직선은 반드시 데이터의 무게중심, 즉 **평균 지점(x̄, ȳ)을 통과**해야 한다는 사실을 이용
 
 
 
