--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -346,7 +346,13 @@
          
             - 데이터를 가장 잘 나타내는 직선은 반드시 데이터의 무게중심, 즉 **평균 지점(x̄, ȳ)을 통과**해야 한다는 사실을 이용
 
+<br/>
 
+- **RSS 사용 예시**
+
+- TV 광고비(X축)와 매출(Y축) 관계
+
+- ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS사용예시.png)
 
 
 
