--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -354,9 +354,19 @@
 
 - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS사용예시.png)
 
+<br/>
 
+### 선형 회귀 분석 
 
+- 선형 모델은 p차원 입력 공간상의 함수로 볼 때 공식은 **f(X) = Xᵀβ** 이다
 
+    - 이때 미분 값은 f'(X) = β 이므로 **계수 벡터 β**는 각 입력 변수(X)가 바뀔 때 예측(f(X))이 얼마나 가파르게 변하는지를 알려주는 **기울기 역할**을 한다 
+
+<br/>
+
+- 선형 모델을 벡터로 나타낼 떄 RSS는 다음과 같다
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS벡터공식.png) 
 
 
 
