--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -1,4 +1,4 @@
-### Terminology (용어 정리)
+<img width="326" height="38" alt="image" src="https://github.com/user-attachments/assets/403f4da4-be6e-4de9-ba94-d21d44b64f18" />### Terminology (용어 정리)
 
 - **output(출력)의 종류**
 
@@ -352,7 +352,7 @@
 
 - TV 광고비(X축)와 매출(Y축) 관계
 
-- ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS사용예시.png)
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS사용예시.png)
 
 <br/>
 
@@ -366,20 +366,49 @@
 
 - 선형 모델을 벡터로 나타낼 떄 RSS는 다음과 같다
 
-    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS벡터공식.png) 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS벡터공식.png)
 
+<br>
 
+- 선형 모델을 행로 나타낼 떄 RSS는 다음과 같다
 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS행공식.png)
 
+<br/>
 
+-  RSS(β)는 파라미터(β)에 대한 **2차 함수(quadratic function)** 이므로, **최솟값은 항상 존재**하지만 **유일하지 않을 수 있음**
 
+    - β에 대해 미분하면 정규 방정식 Xᵀ(y - Xβ) = 0 이므로, 이 식을 만족하는 β를 찾으면 된다
+ 
+    - 만약 XᵀX가 비특이(nonsingular) 행렬이면, 유일한 해는 β̂ = (XᵀX)⁻¹Xᵀy 이다 
 
+<br/>
 
+### Classification (분류)
 
+- 숫자가 아닌 카테고리를 예측 (ex: 강아지, 고양), 즉 **Qualitative(질적)** 변수를 예측
 
+    - **확률**을 이용하여 계산 
 
+<br/>
 
+- Qualitative(질적) 변수는 **순서가 없는 집합** C의 값을 가진다
 
+    - ex: 눈 색깔 ∈ {갈색, 파란색, 녹색}, 갈색, 파란색, 녹색의 순서는 중요하지 않음 
+
+<br/>
+
+- **Classification (분류) 정의** : 특성 벡터 X와 질적 반응 Y가 주어졌을 때, 분류 문제는 X를 입력으로 받아 Y의 값을 예측하는 함수 C(X)를 만드는 것
+
+<br/>
+
+- 예측 함수는 이산적인 값을 가지므로, 우리는 항상 입력 공간을 분류에 따라 레이블이 지정된 **영역(regions)들의 집합**으로 나눌 수 있다
+
+    - ex: 스팸 영역과 정상 영역
+ 
+    - 영역들의 경계(boundaries)는 예측 함수에 따라 거칠거나 부드러울 수 있다
+
+    - 이러한 **결정 경계(decision boundaries)** 를 직선으로 만드는 방법을 **선형(linear) 분류**를 통해 이루어진다 
 
 
 
