--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -410,6 +410,60 @@
 
     - 이러한 **결정 경계(decision boundaries)** 를 직선으로 만드는 방법을 **선형(linear) 분류**를 통해 이루어진다 
 
+<br/>
+
+- **Classification (분류) 예시**
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장분류예시그림.png)
+ 
+    - 주황색/파란색 점 : 실제 데이터로 각각 다른 종류의 데이터를 의미
+ 
+        - 주황색 영역에 새로운 데이터가 들어오면 주황색 그룹이라고 예측
+     
+        - 파란색 영역에 새로운 데이터가 들어오면 파란색 그룹이라고 예측
+
+    - 검은색 직선 : 두 그룹을 나누는 **결정 경계(Decision Boundary)**
+
+<br/>
+
+- 시험 점수로 예시를 들어서 만약  xᵀβ̂ = 0.5 인 결정 경계로 분류를 해보자 
+ 
+    - RSS로 데이터를 학습시켜서 최적의 기울기가 0.02이고 편향이 -0.8 이 나왔다고 가정하면
+     
+    - 예측 점수 ŷ = 0.02 × (시험 점수 X) - 0.8 이다
+     
+        - 이 공식은 0.02 × X - 0.8 = 0.5 이고
+         
+        - 정리하면 0.02 × X = 1.3 이다. 따라서 X = 65점이 커트라인이다
+     
+     - 즉, 65점보다 높으면 합격으로 분류, 낮으면 불합격으로 분류됨
+
+<br/>
+
+### 분류 문제에 선형 회귀를 적용할 수 있을까 
+
+- 채무 불이행(Default) 분류 문제에 대해 Y를 {아니오=0, 예=1}로 코딩한다고 가정해보자
+
+    - Y를 X에 대해 단순 선형 회귀를 수행하고 Ŷ > 0.5이면 '예'로 분류할 수 있을까?
+ 
+    - 이러한 **이진 결과(두 종류 중 하나)** 의 경우, 선형 회귀는 분류기로서 **꽤 잘 작동**하며, 나중에 논의할 선형 판별 분석(LDA)과 동일
+ 
+    - 모집단에서 E(Y|X=x) = Pr(Y=1|X=x) 이므로, 우리는 회귀가 이 작업에 완벽하다고 생각할 수도 있다
+ 
+        - E(Y|X=x) = Pr(Y=1|X=x)의 의미: Y의 값이 0(아니오)과 1(예) 뿐이므로, Y의 평균값(E(Y|X))은 결국 '1이 나올 비율'과 같다
+     
+<br/>
+
+- **하지만 한계가 존재**한다
+
+    - 두 개보다 많은 클래스(종류)를 가진 질적 (qualitative) 반응을 수용할 수 없다
+ 
+    - 회귀 방법은 (클래스가 단 두 개일 때조차) Pr(Y|X)(확률)에 대한 의미 있는 추정치를 제공하지 않음
+ 
+        - 선형 회귀의 예측값은 확률의 범위인 0과 1을 쉽게 벗어나기 때문 (Pr > 1, Pr < 0) 
+
+
+
 
 
 
