--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -464,7 +464,11 @@
 
     - 따라서 선형 모델 말고 로지스틱 모델을 쓰는게 더 나음 
 
+<br/>
 
+- 아래는 선형 회귀와 로지스틱 회귀로 분류했을 때를 시각화 한 것이다
+
+- ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장선형회귀로지스틱비교.png)
 
 
 
