--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -1,4 +1,4 @@
-<img width="326" height="38" alt="image" src="https://github.com/user-attachments/assets/403f4da4-be6e-4de9-ba94-d21d44b64f18" />### Terminology (용어 정리)
+### Terminology (용어 정리)
 
 - **output(출력)의 종류**
 
