--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -2,4 +2,40 @@
 
 - 정의 : 두 가지 종류 중 하나를 예측하는 대표적인 분류(Classification) 알고리즘
 
-    -  
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장로지스틱공식.png)
+ 
+    - 위 로지스틱 공식의 범위는 **[0,1]** 이다
+
+<br/>
+
+- **로그-오즈(log-odds)**
+
+    - **odds** : 사건이 일어나지 않을 확률에 대한 일어날 확률의 비율
+ 
+        - 로지스틱 함수 공식을 수학적으로 정리하고 변형하면 아래 공식 나오는데 이것을 odds라고 한다 
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장odds공식.png)
+     
+        - P(X) : 일어날 확률
+     
+        - 1 - P(X) : 일어나지 않을 확률
+     
+    - 로그-오즈(log-odds) : 0과 1 사이에 갇혀 있는 확률을 -∞ 에서 +∞ 까지의 직선 세계로 보내주는 것
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장로그오즈공식.png)
+     
+            - 오즈 (p/(1-p)): 범위가 [0, +∞]로 확장
+
+            - 로그-오즈 (log(odds)): 범위가 [-∞, +∞]로 완벽하게 확장 
+     
+        - 위 odds 공식을 로그 안에 넣어주면 로그 규칙에 의해 e의 지수만 나오게 됨 
+     
+
+ 
+<br/>
+
+- 위 개념을 정리하면
+
+    - (1) : 로지스틱 회귀 모델은 입력 데이터 X를 받아 **선형 계산**한다
+ 
+    - (2) : 1단계에서 나온 그 숫자를 **로지스틱 함수**에 넣어서 **확률**을 구한다 
