--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -39,3 +39,175 @@
     - (1) : 로지스틱 회귀 모델은 입력 데이터 X를 받아 **선형 계산**한다
  
     - (2) : 1단계에서 나온 그 숫자를 **로지스틱 함수**에 넣어서 **확률**을 구한다 
+
+<br/>
+
+### 최대 가능도(maximum likelihood) 
+
+- 로지스틱 회귀의 최적 계수를 찾을 때 선형 회귀에서 썼던 최소 제곱법 대신 **최대 가능도 추정법**을 사용함
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장최대가능도공식.png)
+ 
+    - Π 기호는 **곱하기**를 의미함
+
+    - Π p(xᵢ): 실제 정답이 1인 모든 데이터에 대해, 모델이 예측한 확률들을 전부 곱함
+
+    - Π (1 - p(xᵢ')): 실제 정답이 0인 모든 데이터에 대해, 모델이 예측한 '0일 확률'들을 전부 곱함
+ 
+    - 쉽게 설명하자면, 동전을 3번 던졌는데 '앞-뒤-앞'이 나왔을 때, 이 일이 일어날 확률은 P(앞) × P(뒤) × P(앞)로 계산한다. 즉 각 확률을 **독립적**으로 보고 이 확률을 모두 곱한 것이다
+ 
+        - 최대 가능도(maximum likelihood) 는 이 원리를 사용하여 가장 높은 확률을 보여주는 베타를 구하는 것이다
+     
+        - 여기서 곱의 범위는 0~1 이기 때문에 계속 곱하면 작아져서 계산할 때 **로그**를 사용한다
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
