--- a/Artificial Neural Network/Artificial Neural Network study/03-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-1장.md
@@ -224,7 +224,7 @@
         
            - 최종 EPE = 10.0 + 0.0 + 10.0 + 5.625 + 1.875 = 27.5
         
-           - 27.5가 **모델이 가질 수 있는 가장 낮은 오차 점수**
+           - 27.5가 **해당 모델의 평균적인 오차의 크기(기대 예측 오차, EPE)** 를 의미
 
 <br/>
 
