--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -182,3 +182,136 @@
     - **Backpropagation (역전파)**
  
         - 오차를 뒤로 전파해 가중치를 조정 
+
+<br/>
+
+### 3 주차
+
+- **기대 제곱 예측 오차(Expected squared prediction error, EPE)**
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE.png) 
+
+    - 목표 : **평균적**으로 오차가 최소가 되는 함수 f를 찾는 것
+ 
+    - **조건부 기댓값(conditional mean)** 사용
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE공식전개4.png) 
+ 
+    - 풀이 과정
+    
+        - (1) X = k인 조건부 기댓값(conditional mean) 구하기
+     
+        - (2) 구한 f(x)를 EPE 식에 대입
+     
+        - (3) 결과 값이 모델의 평균적인 오차가 되는 것 
+
+<br/>
+
+- **RSS (residual sum of squares) : 잔차 제곱합**
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS공식.png) 
+
+    - **선형회귀**에서 사용
+ 
+    - 반복적 업데이트 x, 이 공식에 x와 y 데이터를 넣으면 최적의 기울기와 편향을 구할 수 있음
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-1장RSS최소화공식.png)
+
+<br/>
+
+### Logistic Model (로지스틱 모델)
+
+- 정의 : 두 가지 종류 중 하나를 예측하는 대표적인 분류(Classification) 알고리즘
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장로지스틱공식.png)
+ 
+    - 로지스틱 범위 : **[0,1]**
+ 
+    - **오즈(odds)** : 사건이 일어나지 않을 확률에 대한 일어날 확률의 비율
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장odds공식.png)
+ 
+    - **로그-오즈(log-odds)** : 0과 1 사이에 갇혀 있는 확률을 -∞ 에서 +∞ 까지의 직선 세계로 보내주는 것
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장로그오즈공식.png)
+     
+        - 오즈 (p/(1-p)): 범위가 [0, +∞]로 확장
+
+        - 로그-오즈 (log(odds)): 범위가 [-∞, +∞]로 완벽하게 확장
+
+    - **과정**
+
+        - (1) : 로지스틱 회귀 모델은 입력 데이터 X를 받아 **선형 계산**한다
+ 
+        - (2) : 1단계에서 나온 그 숫자를 **로지스틱 함수**에 넣어서 **확률**을 구한다 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
