--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -211,9 +211,55 @@
 
 ### 기대값의 선형성 
 
+- **기대값의 선형성** : 두 확률변수를 더한 뒤 기대값을 구하는 것은, 각각의 기대값을 구해서 더하는 것과 같다
 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장기대값의선형성공식.png) 
 
+    - 위 공식은 **독립과 무관하게** 사용 가능
+ 
+    - 머신러닝에서는 미니배치(batch)의 손실(loss)을 계산할 때각 데이터 손실의 평균을 바로 합의 기대값으로 다룬
 
+<br/>
+
+### 기댓값의 선형성 활용 문제 
+
+- 문제 상황
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제.png)
+ 
+    - 개구리가 0에서 시작
+
+   - 한 번 움직일 때:
+
+   - 왼쪽(-1)로 갈 확률 = pL
+
+   - 오른쪽(+1)로 갈 확률 = pR
+
+   - 제자리에 있을 확률 = pS
+
+   - 확률 합: pL + pR + pS = 1
+
+   - 개구리가 2번 독립적으로 움직인 뒤의 위치 = X
+
+   - 구할 것: E[X] (평균 위치)
+     
+<br/>
+
+- **일반적인 풀이**
+
+    - PMF 계산
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제PMF풀이.png) 
+
+    - 최종 기대값 계산
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제일반풀이마지막.png)  
+
+<br/>
+
+- **기대값의 선형성을 이용한 풀이**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제기대값의선형성풀이.png) 
 
 
 
