--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -253,13 +253,34 @@
 
     - 최종 기대값 계산
  
-        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제일반풀이마지막.png)  
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제일반풀이마지막.png)
+
+    - 즉, 전체적인 풀이과정은
+    
+    - (1) 가능한 경우 k에 대한 모든 경우의 확률 구하기
+ 
+    - (2) k 값 x P(k)의 최종 합 구하기 
 
 <br/>
 
 - **기대값의 선형성을 이용한 풀이**
 
-    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제기대값의선형성풀이.png) 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장개구리예시문제기대값의선형성풀이.png)
+ 
+        - 각 사건에 대한 기대값이 Pr - PL인 이유도 마찬가지로 k의 값과 각 확률을 곱한 것이다
+     
+            - 자연스럽게 k = 0 일때는 곱해서 사라짐
+         
+        - 마지막 공식인 E[X] = E[X1] + E[X2]를 보면 X1이 발생할 기댓값은 (−1)⋅pL ​+ (0)⋅pS​ + (1)⋅pR​ 이고 X2가 발생할 기댓값과 (−1)⋅pL ​+ (0)⋅pS​ + (1)⋅pR​ 이다. 따라서 2(Pr - PL)이다
+
+    - 위 식을 일반화하여 정리하면
+ 
+        - (1) : 각 사건을 개별 사건으로 정의 ( X = X1 + X2 + ... + Xk)
+     
+        - (2) : 각 사건의 k 값 x P(k) 구하기
+     
+        - (3) : 각 기대값을 **더하기**
+
 
 
 
